--- a/public/index.html
+++ b/public/index.html
@@ -41,4 +41,9 @@
     -->
   </body>
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+  <script src="nerdamer.core.js"></script>
+  <script src="Algebra.js"></script>
+  <script src="Calculus.js"></script>
+  <script src="Solve.js"></script>
+  <script src="Extra.js"></script>
 </html>
